<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WayShopper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="search_store">Search by Store, Item or List</string>
    <string name="browse_store">Browse Stores</string>
    <string name="search_items">Search For Items</string>
    <string name="choose_existing">Choose an Existing List</string>
    <string name="already_in_store">I\'m in a Store Already</string>
    <string name="way_shopper">Way Shopper</string>
    <string name="title_activity_secondpage">Secondpage</string>
    <string name="title_activity_mappage">Mappage</string>
    <string name="submit">Submit</string>
<<<<<<< HEAD
    <string name="Back">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
=======
>>>>>>> parent of ce317a9... New Main page

</resources>
